[package]
name = "tl"
version = "0.1.0"
edition = "2021"
description = "Minimal global markdown task log — CLI, TUI, and MCP server"

[[bin]]
name = "tl"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Date/time
chrono = "0.4"

# Filesystem
dirs = "6"
tempfile = "3"
fs2 = "0.4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# MCP
rmcp = { version = "=0.15.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Regex for parsing
regex = "1"
